--- a/View/snake.html
+++ b/View/snake.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
-    <link rel="manifest" href="manifest.webmanifest">
-
+    <link rel="manifest" href="../manifest.webmanifest">
+    <link rel="stylesheet" href="../Css/sanke.css" type="text/css" />
     <style>
         .background dark {
 
@@ -16,15 +16,13 @@
     </style>
 
 
-
-
 </head>
 
 <body style="width: 100%;">
 
     <canvas id="canvas" width="480" height="480"></canvas>
 
-    <script src="game.js">
+    <script src="../Controller/game.js">
 
 
     </script>
@@ -33,13 +31,13 @@
     <footer style="border: solid black 4px; width: 325px;">
 
         <div style="display: flex; gap: 25px; width: auto">
-            <button onclick="onclickUp()" style="width: 150px; height: 25px;" type="button" >Up</button>
-            <button onclick="onclickDown()" style="width: 150px; height: 25px;">Down</button>
+            <button onclick="onclickUp()" style="width: 150px; height: 150px;" type="button" >Up</button>
+            <button onclick="onclickDown()" style="width: 150px; height: 150px;">Down</button>
         </div>
         <br>
         <div style="display: flex; gap: 25px; width: auto">
-            <button onclick="onclickLeft()" style="width: 150px; height: 25px;" type="button" >Left</button>
-            <button onclick="onclickRight()" style="width: 150px; height: 25px;">Right</button>
+            <button onclick="onclickLeft()" style="width: 150px; height: 150px;" type="button" >Left</button>
+            <button onclick="onclickRight()" style="width: 150px; height: 150px;">Right</button>
         </div>
     </footer>
 
