--- a/Css/sanke.css
+++ b/Css/sanke.css
@@ -1,3 +1,8 @@
-#button-controlls {
-    color: green;;
-}
+button{
+    background-color:rgb(186, 189, 190);
+  }
+  
+  button:hover{background-color:rgba(219, 212, 212, 0.815);}
+  
+  button:active{background-color:rgb(255, 255, 255);}
+
